src/objects/BT_CO_STPPRS_StopPressSubscription__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>BT_CO_STPPRS_StopPressSubscription</relationshipLabel>
        <relationshipName>BT_CO_STPPRS_StopPressSubscription</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quotes_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quotes Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amount_paid__c</fullName>
        <label>amount paid</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_renewal_indicator__c</fullName>
        <label>auto renewal indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>card_expiry_date__c</fullName>
        <label>card expiry date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>credit_card_type__c</fullName>
        <label>credit card type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delivery_fee_indicator__c</fullName>
        <label>delivery fee indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filler__c</fullName>
        <label>filler</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>free_gift2__c</fullName>
        <label>free gift2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>free_gift3__c</fullName>
        <label>free gift3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>free_gift4__c</fullName>
        <label>free gift4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hse_type__c</fullName>
        <label>hse type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mlgagt__c</fullName>
        <label>mlgagt</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>online_order_num__c</fullName>
        <label>online order num</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pay_type__c</fullName>
        <label>pay type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_number__c</fullName>
        <label>payment number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_code__c</fullName>
        <label>product code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>promo_indicator__c</fullName>
        <label>promo indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_age_group__c</fullName>
        <label>recipient age group</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_blgm__c</fullName>
        <label>recipient blgm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_country__c</fullName>
        <label>recipient country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_country_code__c</fullName>
        <label>recipient country code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_coym__c</fullName>
        <label>recipient coym</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_date_of_birth__c</fullName>
        <label>recipient date of birth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_dsg__c</fullName>
        <label>recipient dsg</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_email_id__c</fullName>
        <label>recipient email id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_fax_num__c</fullName>
        <label>recipient fax num</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_home_tel_num__c</fullName>
        <label>recipient home tel num</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_house_block_num__c</fullName>
        <label>recipient house block num</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_house_level_number__c</fullName>
        <label>recipient house level number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_house_unit_number__c</fullName>
        <label>recipient house unit number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_hphnn__c</fullName>
        <label>recipient hphnn</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_icn__c</fullName>
        <label>recipient icn</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_income_range__c</fullName>
        <label>recipient income range</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_local_address__c</fullName>
        <label>recipient local address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_name__c</fullName>
        <label>recipient name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_office_ext_num__c</fullName>
        <label>recipient office ext num</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_office_tel_num__c</fullName>
        <label>recipient office tel num</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_overseas_add1__c</fullName>
        <label>recipient overseas add1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_overseas_add2__c</fullName>
        <label>recipient overseas add2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_overseas_add3__c</fullName>
        <label>recipient overseas add3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_postal_code__c</fullName>
        <label>recipient postal code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_privacy_indicator__c</fullName>
        <label>recipient privacy indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_profession__c</fullName>
        <label>recipient profession</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_race__c</fullName>
        <label>recipient race</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_salutation__c</fullName>
        <label>recipient salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_sex__c</fullName>
        <label>recipient sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recipient_strm__c</fullName>
        <label>recipient strm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recurring_indicator__c</fullName>
        <label>recurring indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>referred_start_date__c</fullName>
        <label>referred start date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_copies__c</fullName>
        <label>sub copies</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sub_period__c</fullName>
        <label>sub period</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscribe_local_address__c</fullName>
        <label>subscribe local address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_age_group__c</fullName>
        <label>subscriber age group</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_blgm__c</fullName>
        <label>subscriber blgm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_country__c</fullName>
        <label>subscriber country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_country_code__c</fullName>
        <label>subscriber country code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_coym__c</fullName>
        <label>subscriber coym</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_date_of_birth__c</fullName>
        <label>subscriber date of birth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_dsg__c</fullName>
        <label>subscriber dsg</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_email_id__c</fullName>
        <label>subscriber email id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_fax_number__c</fullName>
        <label>subscriber fax number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_home_tel_number__c</fullName>
        <label>subscriber home tel number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_house_block_number__c</fullName>
        <label>subscriber house block number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_house_level_number__c</fullName>
        <label>subscriber house level number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_house_unit_number__c</fullName>
        <label>subscriber house unit number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_hphnn__c</fullName>
        <label>subscriber hphnn</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_icn__c</fullName>
        <label>subscriber icn</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_income_range__c</fullName>
        <label>subscriber income range</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_name__c</fullName>
        <label>subscriber name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_office_ext_number__c</fullName>
        <label>subscriber office ext number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_office_tel_number__c</fullName>
        <label>subscriber office tel number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_overseas_add1__c</fullName>
        <label>subscriber overseas add1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_overseas_add2__c</fullName>
        <label>subscriber overseas add2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_overseas_add3__c</fullName>
        <label>subscriber overseas add3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_postal_code__c</fullName>
        <label>subscriber postal code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_privacy_indicator__c</fullName>
        <label>subscriber privacy indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_profession__c</fullName>
        <label>subscriber profession</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_race__c</fullName>
        <label>subscriber race</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_salutation__c</fullName>
        <label>subscriber salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_sex__c</fullName>
        <label>subscriber sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_strm__c</fullName>
        <label>subscriber strm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscriber_type__c</fullName>
        <label>subscriber type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subscription_package_code__c</fullName>
        <label>subscription package code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit_discount_price__c</fullName>
        <label>unit discount price</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_STPPRS_StopPressSubscription</label>
    <nameField>
        <label>BT_CO_STPPRS_StopPressSubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_STPPRS_StopPressSubscription</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>